--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,3 +2,7 @@ bitcoind:
   image: bitcoind
   volumes:
     - /bitcoin:/root/.bitcoin
+ethereum:
+  image: ethereum
+  volumes:
+    - /ethereum:/root/.ethereum
